--- a/index.html
+++ b/index.html
@@ -125,6 +125,35 @@
     <!--Main content end--> 
 
     <!--Footer start-->
+       <!-- Footer  HTML-->
+
+<!-- Footer -->
+<footer>
+  <p>&copy; 2025 BouncyFun | Serving Belfast &amp; surrounding areas</p>
+  <small>Fully insured • Safety certified • Contact: info@bouncyfun.com</small>
+
+  <!-- Social Media Links -->
+  <div class="mt-2">
+    <a
+      href="https://www.facebook.com/YourPageName"
+      class="text-white mx-2"
+      target="_blank"
+      rel="noopener noreferrer"
+      aria-label="Visit our Facebook page">
+      <i class="fab fa-facebook fa-lg"></i>
+    </a>
+
+    <a
+      href="https://www.instagram.com/YourProfileName"
+      class="text-white mx-2"
+      target="_blank"
+      rel="noopener noreferrer"
+      aria-label="Visit our Instagram profile">
+      <i class="fab fa-instagram fa-lg"></i>
+    </a>
+  </div>
+</footer>
+
     <!--Footer end--> 
 
     <!-- Javascripts -->
@@ -134,4 +163,5 @@
     <script src="js/popper.min.js"></script>
     
 </body>
+
 </html>
