--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
 <h1> Services</h1>
 
 
-  <div class="card mb-3" style="max-width: 540px;">
+  <div class="card mb-3" style="max-width: 540;">
   <div class="row g-1">
     <div class="col-md-4">
       <img src="images/football boot personalisation.webp" class="img-fluid rounded-start" alt="...">
@@ -60,3 +60,4 @@
     </div>
   </div>
 </div>
+
