--- a/team.html
+++ b/team.html
@@ -42,67 +42,47 @@
 
   <!-- Navigation End -->
 
-  <!--Main content Start-->
-<h1> Services</h1>
+    <!--Main content Start-->
+<h1> Team</h1>
 
-
-  <div class="container" style="max-width: 540px;">
-  <div class="row g-1">
-    <div class="col-md-4">
-      <img src="images/football boot personalisation.webp" class="img-fluid rounded-start" alt="...">
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/team member 1.avif" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Joshua</h5>
+        <p>Manager of The Boot Room.</p>
+      </div>
     </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Custom Initials</h5>
-        <p class="card-text">We offer personalisation with our boots including letters, numbers, and even flags. These usually cost between £10-£25</p>
+    <div class="carousel-item">
+      <img src="images/team member 2.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Stephen</h5>
+        <p>Controls all orders coming through our business.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="images/team member 3.avif" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Brendan</h5>
+        <p>Works hard to carry out the services we offer.</p>
       </div>
     </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
-
-
-
-
-  <div class="container" style="max-width: 540px;">
-  <div class="row g-1">
-    <div class="col-md-4">
-      <img src="images/Name printing.webp" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Football Shirt Numbers</h5>
-        <p class="card-text">We can print your favourite players name on the back of your shirt, or you can chose to get your own name and number printed!</p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
-
-  <div class="container" style="max-width: 540px;">
-  <div class="row g-1">
-    <div class="col-md-4">
-      <img src="images/stud conversion.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8" style="max-height: 400px;">
-      <div class="card-body">
-        <h5 class="card-title">Football Boot Stud Conversion</h5>
-        <p class="card-text">We can convert your football boots from moulded studs or blades, to metal studs, leaving them ready to be worn on Soft Ground surfaces.</p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-
 
     <!--Footer start-->
 <footer>
@@ -133,10 +113,8 @@ aria-label="Visit our Instagram profile">
 
     <!-- Javascripts -->
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/popper.min.js"></script>
 
     
 </body>
 </html>
+
