--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
           <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
         </ul>
       </div>
@@ -103,4 +103,5 @@ aria-label="Visit our Instagram profile">
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/popper.min.js"></script>
 </body>
+
 </html>
