Refactor index.html and correct testimonial typos
Updated HTML structure and fixed minor typos in testimonials.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
    
       <!-- Brand -->
-      <a class="navbar-brand fw-bold" href="#">The Boot Room</a>
+      <a class="navbar-brand fw-bold" href="index.html">The Boot Room</a>
 
       <!-- Toggler -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -160,4 +160,5 @@ aria-label="Visit our Instagram profile">
     <script src="js/popper.min.js"></script>
     
 </body>
+
 </html>
