Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ aria-label="Visit our Facebook page">
 </a>
 <a
 href="https://www.instagram.com/YourProfileName"
-class="text-white mx-2"
+class="bi bi-instagram"
 target="_blank"
 rel="noopener noreferrer"
 aria-label="Visit our Instagram profile">
@@ -162,3 +162,4 @@ aria-label="Visit our Instagram profile">
 </body>
 
 </html>
+
