--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing: Landing Page</title>
-
+    <title>The Boot Room | Contact Page</title>
+    <meta name="description" content="The Boot Room is a business that supplies football boots from the world’s biggest sports brands including Adidas, Nike, Puma, Mizuno and more." />
+    <meta name="keywords" content="Football, Boots, Nike, Adidas" />
     <!--Bootstrap-->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
