--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!--Custom css file-->
     <link href="css/custom.css" rel="stylesheet">
-
+<!-- Header HTML -->
+<!-- Font Awesome icons -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-
+awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
 
@@ -164,4 +168,5 @@ aria-label="Visit our Instagram profile">
 </body>
 
 </html>
+
 
