--- a/products.html
+++ b/products.html
@@ -12,6 +12,12 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!--Custom css file-->
   <link href="css/custom.css" rel="stylesheet">  
+<!-- Header HTML -->
+<!-- Font Awesome icons -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-
+awesome/6.5.0/css/all.min.css"/>
+
 </head>
 <body>
 
