--- a/team.html
+++ b/team.html
@@ -11,9 +11,14 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!--Custom css file-->
     <link href="css/custom.css" rel="stylesheet">
-
+<!-- Header HTML -->
+<!-- Font Awesome icons -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-
+awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
+
 
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-custom">
