--- a/products.html
+++ b/products.html
@@ -237,10 +237,9 @@ aria-label="Visit our Instagram profile">
 
 
     <!-- Javascripts -->
-    <script src="js/popper.min.js"></script>
+     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-4.4.1.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    
 </body>
 </html>
