--- a/products.html
+++ b/products.html
@@ -53,9 +53,9 @@ awesome/6.5.0/css/all.min.css"/>
     <!--Main content start--> 
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
-    <button class="nav-link active" id="nav-home-tab" data-toggle="tab" data-target="#nav-football-boots" type="button" role="tab" aria-controls="nav-football-boots" aria-selected="true">Football Boots</button>
-    <button class="nav-link" id="nav-profile-tab" data-toggle="tab" data-target="#nav-football-kits" type="button" role="tab" aria-controls="nav-football-kits" aria-selected="true">Football Kits</button>
-    <button class="nav-link" id="nav-contact-tab" data-toggle="tab" data-target="#nav-teamwear" type="button" role="tab" aria-controls="nav-teamwear" aria-selected="true">Teamwear</button>
+    <button class="nav-link active" id="nav-footballboots-tab" data-bs-toggle="tab" data-bs-target="#nav-football-boots" type="button" role="tab" aria-controls="nav-football-boots" aria-selected="true">Football Boots</button>
+    <button class="nav-link" id="nav-footballkits-tab" data-bs-toggle="tab" data-bs-target="#nav-football-kits" type="button" role="tab" aria-controls="nav-football-kits" aria-selected="false">Football Kits</button>
+    <button class="nav-link" id="nav-teamwear-tab" data-bs-toggle="tab" data-bs-target="#nav-teamwear" type="button" role="tab" aria-controls="nav-teamwear" aria-selected="false">Teamwear</button>
   </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
